--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "url": "https://johann.pardanaud.com/"
   },
   "license": "MIT",
-  "repository": "github:zoonru/puphpeteer",
+  "repository": "git+https://github.com/zoonru/puphpeteer.git",
   "engines": {
     "node": ">=9.0.0"
   },
   "dependencies": {
-    "@zoon/rialto": "github:zoonru/rialto#semver:^1.5.0",
+    "@zoon/rialto": "git+https://github.com/zoonru/rialto.git#semver:^1.5.0",
     "puppeteer": "^20"
   },
   "devDependencies": {
